--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -5,12 +5,16 @@
 
     &--wrapper{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         padding: 50px 0;
     }
 
     &--title_box{
-        margin-right: auto;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
     }
 
     &--title{
@@ -20,8 +24,8 @@
         line-height: 33px;
         font-variant: all-small-caps;
         color: #555555;
-        margin-bottom: 30px;
-        height: 40px;
+        margin-bottom: 20px;
+        padding: 7px 10px;
     }
 
     &--title:hover{
@@ -29,7 +33,7 @@
     }
 
     &--info_box{
-        width: 47%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         margin-right: 100px;
@@ -38,10 +42,10 @@
     &--info_title_box{
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: space-between;
         z-index: 1;
+        margin-bottom: 20px;
     }
-
 
     &--info_title_box:hover{
         cursor: pointer;
@@ -49,7 +53,7 @@
 
     &--info_title{
         font-weight: var(--font-weight-700);
-        font-size: 45px;
+        font-size: 40px;
         line-height: 47px;
         font-variant: all-small-caps;
         color: #000000;
@@ -58,14 +62,10 @@
     &--toggler{
         background-color: inherit   ;
         border: none;
-        margin: 10px 45px 0 45px;
+        margin-top: 10px;
+        padding: 0;
     }
-
-    &--toggler{
-        background-color: inherit   ;
-        border: none;
-        margin: 10px 10px 0 10px;
-    }
+    
     &--toggler:hover{
         cursor: pointer;
     }
@@ -76,7 +76,6 @@
         align-items: center;
         margin: 5px 0 30px 0;
         display: none;
-
     }
 
     &--card{
@@ -85,6 +84,7 @@
         padding: 30px 12px 80px 16px;
         background-color: #C5DBCF;
         overflow: hidden;
+        transition: all 0.2s ease-in-out;
     }
 
     &--card:hover{
@@ -139,7 +139,6 @@
     
 }
 
-
 .plan-card{
     animation: openCard 1.5s ease;
     display: flex;
@@ -160,12 +159,9 @@
         height: 100%;
     }
 }
-@keyframes closeCard {
-    
-    
-}
 
-
+// @keyframes closeCard {
+// }
 
 .current{
     font-weight: 500;
@@ -176,11 +172,6 @@
     border-bottom: 3px dashed #C99B67;
     padding-bottom: 5px;
 }
-
-
-
-
-
 
 
 // .coffee_plan::after{
@@ -218,3 +209,594 @@
 //     z-index: 10;
 //     transform: translateX(-85px);
 // }
+
+@media only screen and (max-width: 1316px){
+    .coffee_plan{
+        &--title{
+            font-size: 25px;
+            line-height: 31px;
+            margin-bottom: 19px;
+        }
+
+        &--info_title{
+            font-size: 37px;
+            line-height: 45px;
+        }
+
+        &--info_box{
+            margin-right: 80px;
+        }
+    
+        &--card{
+            padding: 29px 11px 79px 15px;
+        }
+    
+        &--card_title{
+            font-size: 27px;
+            line-height: 27px;
+        }
+    
+        &--card_desc{
+            font-size: 17px;
+            line-height: 23px;
+        }
+    
+        &--summary{
+            margin-top: 80px;
+        }
+    
+        &--summary_title{
+            font-size: 15px;
+            line-height: 17px;
+        }
+    
+        &--summary_desc{
+            font-size: 23px;
+            line-height: 33px;
+            margin-top: 9px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1238px){
+    .coffee_plan{
+        &--title{
+            font-size: 23px;
+            line-height: 29px;
+            margin-bottom: 17px;
+        }
+
+        &--info_title{
+            font-size: 35px;
+            line-height: 43px;
+        }
+
+        &--info_box{
+            margin-right: 70px;
+        }
+    
+        &--card{
+            padding: 27px 9px 77px 13px;
+        }
+    
+        &--card_title{
+            font-size: 25px;
+            line-height: 25px;
+        }
+    
+        &--card_desc{
+            font-size: 15px;
+            line-height: 21px;
+        }
+    
+        &--summary{
+            margin-top: 70px;
+        }
+    
+        &--summary_title{
+            font-size: 13px;
+            line-height: 15px;
+        }
+    
+        &--summary_desc{
+            font-size: 21px;
+            line-height: 31px;
+            margin-top: 7px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1121px){
+    .coffee_plan{
+        &--title{
+            font-size: 21px;
+            line-height: 27px;
+            margin-bottom: 15px;
+        }
+
+        &--info_title{
+            font-size: 33px;
+            line-height: 41px;
+        }
+
+        &--info_box{
+            margin-right: 60px;
+        }
+    
+        &--card{
+            padding: 25px 7px 75px 11px;
+        }
+    
+        &--card_title{
+            font-size: 23px;
+            line-height: 23px;
+        }
+    
+        &--card_desc{
+            font-size: 14px;
+            line-height: 19px;
+        }
+    
+        &--summary{
+            margin-top: 60px;
+        }
+    
+        &--summary_title{
+            font-size: 11px;
+            line-height: 13px;
+        }
+    
+        &--summary_desc{
+            font-size: 19px;
+            line-height: 29px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1030px){
+    .coffee_plan{
+        &--title{
+            font-size: 19px;
+            line-height: 25px;
+            margin-bottom: 13px;
+        }
+
+        &--info_title{
+            font-size: 31px;
+            line-height: 39px;
+        }
+
+        &--info_box{
+            margin-right: 50px;
+        }
+    
+        &--card{
+            padding: 25px 7px 75px 11px;
+        }
+    
+        &--card_title{
+            font-size: 21px;
+            line-height: 21px;
+        }
+    
+        &--card_desc{
+            font-size: 13px;
+            line-height: 17px;
+        }
+    
+        &--summary{
+            margin-top: 50px;
+        }
+    
+        &--summary_title{
+            font-size: 10px;
+            line-height: 12px;
+        }
+    
+        &--summary_desc{
+            font-size: 17px;
+            line-height: 27px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 950px){
+    .coffee_plan{
+        &--title{
+            font-size: 18px;
+            line-height: 24px;
+            margin-bottom: 12px;
+        }
+
+        &--info_title{
+            font-size: 30px;
+            line-height: 37px;
+        }
+
+        &--info_box{
+            margin-right: 40px;
+        }
+
+        &--card_box{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin: 5px 0 30px 0;
+            display: none;
+        }
+    
+        &--card{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            padding: 50px 15px 50px 15px;
+            margin-bottom: 20px;
+            border-radius: 20px;
+        }
+    
+        &--card_title{
+            font-size: 26px;
+            line-height: 32px;
+            margin: 0 0 10px 0
+        }
+    
+        &--card_desc{
+            font-size: 16px;
+            line-height: 18px;
+        }
+    
+        &--summary{
+            margin-top: 40px;
+            border-radius: 10px;
+        }
+    
+        &--summary_title{
+            font-size: 9px;
+            line-height: 11px;
+        }
+    
+        &--summary_desc{
+            font-size: 16px;
+            line-height: 26px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 792px){
+    .coffee_plan{
+        &--wrapper{
+            padding: 35px 0;
+        }
+
+        &--title{
+            font-size: 17px;
+            line-height: 23px;
+            margin-bottom: 11px;
+        }
+
+        &--info_title{
+            font-size: 25px;
+            line-height: 31px;
+        }
+
+        &--info_box{
+            margin-right: 30px;
+        }
+
+        &--card_box{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin: 5px 0 20px 0;
+            display: none;
+        }
+    
+        &--card{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            padding: 40px 12px 40px 12px;
+            margin-bottom: 10px;
+            border-radius: 20px;
+        }
+    
+        &--card_title{
+            font-size: 23px;
+            line-height: 29px;
+            margin: 0 0 10px 0
+        }
+    
+        &--card_desc{
+            font-size: 15px;
+            line-height: 17px;
+        }
+    
+        &--summary{
+            margin-top: 30px;
+            border-radius: 20px;
+        }
+        
+        &--summary_content{
+            padding: 30px 15px;
+        }
+
+        &--summary_title{
+            font-size: 9px;
+            line-height: 11px;
+        }
+    
+        &--summary_desc{
+            font-size: 15px;
+            line-height: 25px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .coffee_plan{
+        &--wrapper{
+            padding: 30px 0;
+        }
+
+        &--title{
+            font-size: 15px;
+            line-height: 21px;
+            margin-bottom: 9px;
+        }
+
+        &--info_title{
+            font-size: 19px;
+            line-height: 23px;
+        }
+
+        &--toggler > svg{
+            width: 30px;
+            height: 30px;
+        }
+
+        &--info_title_box{
+            margin-bottom: 15px;
+        }
+
+        &--info_box{
+            margin-right: 20px;
+        }
+
+        &--card_box{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin: 5px 0 15px 0;
+            display: none;
+        }
+    
+        &--card{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            padding: 25px 9px 25px 9px;
+            margin-bottom: 10px;
+            border-radius: 20px;
+        }
+    
+        &--card_title{
+            font-size: 19px;
+            line-height: 23px;
+            margin: 0 0 9px 0
+        }
+    
+        &--card_desc{
+            font-size: 13px;
+            line-height: 15px;
+        }
+    
+        &--summary{
+            margin-top: 30px;
+            border-radius: 20px;
+        }
+        
+        &--summary_content{
+            padding: 25px 9px;
+        }
+
+        &--summary_title{
+            font-size: 7px;
+            line-height: 9px;
+        }
+    
+        &--summary_desc{
+            font-size: 13px;
+            line-height: 17px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .coffee_plan{
+        &--wrapper{
+            padding: 25px 0;
+        }
+
+        &--title{
+            font-size: 11px;
+            line-height: 17px;
+            margin-bottom: 7px;
+        }
+
+        &--info_title{
+            font-size: 15px;
+            line-height: 17px;
+        }
+
+        &--toggler > svg{
+            width: 25px;
+            height: 25px;
+        }
+
+        &--info_title_box{
+            margin-bottom: 11px;
+        }
+
+        &--info_box{
+            margin-right: 15px;
+        }
+
+        &--card_box{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin: 5px 0 11px 0;
+            display: none;
+        }
+    
+        &--card{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            padding: 17px 9px 17px 9px;
+            margin-bottom: 9px;
+            border-radius: 20px;
+        }
+    
+        &--card_title{
+            font-size: 15px;
+            line-height: 17px;
+            margin: 0 0 9px 0
+        }
+    
+        &--card_desc{
+            font-size: 11px;
+            line-height: 13px;
+        }
+    
+        &--summary{
+            margin-top: 20px;
+            border-radius: 20px;
+        }
+        
+        &--summary_content{
+            padding: 20px 9px;
+        }
+
+        &--summary_title{
+            font-size: 7px;
+            line-height: 9px;
+        }
+    
+        &--summary_desc{
+            font-size: 11px;
+            line-height: 15px;
+            margin-top: 5px;
+        }
+    }
+}
+
+@media only screen and (max-width: 400px){
+    .coffee_plan{
+        &--wrapper{
+            padding: 20px 0;
+        }
+
+        &--title{
+            font-size: 10px;
+            line-height: 16px;
+            margin-bottom: 7px;
+        }
+
+        &--info_title{
+            font-size: 14px;
+            line-height: 16px;
+        }
+
+        &--toggler > svg{
+            width: 23px;
+            height: 23px;
+        }
+
+        &--info_title_box{
+            margin-bottom: 10px;
+        }
+
+        &--info_box{
+            margin-right: 15px;
+        }
+
+        &--card_box{
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            margin: 5px 0 10px 0;
+            display: none;
+        }
+    
+        &--card{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            padding: 17px 9px 17px 9px;
+            margin-bottom: 9px;
+            border-radius: 20px;
+        }
+    
+        &--card_title{
+            font-size: 14px;
+            line-height: 16px;
+            margin: 0 0 9px 0
+        }
+    
+        &--card_desc{
+            font-size: 10px;
+            line-height: 12px;
+        }
+    
+        &--summary{
+            margin-top: 15px;
+            border-radius: 20px;
+        }
+        
+        &--summary_content{
+            padding: 17px 9px;
+        }
+
+        &--summary_title{
+            font-size: 7px;
+            line-height: 9px;
+        }
+    
+        &--summary_desc{
+            font-size: 10px;
+            line-height: 14px;
+            margin-top: 5px;
+        }
+    }
+}
