--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -140,8 +140,9 @@
 }
 
 .plan-card{
-    animation: openCard 1.5s ease;
-    display: flex;
+    animation: openCard 1.8s ease;
+    display: flex !important;
+    overflow: hidden;
 }
 
 @keyframes openCard {
@@ -420,12 +421,11 @@
         }
 
         &--card_box{
-            display: flex;
+            display: none;
             flex-direction: column;
             justify-content: start;
             align-items: start;
             margin: 5px 0 30px 0;
-            display: none;
         }
     
         &--card{
