--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -60,7 +60,7 @@
     }
 
     &--toggler{
-        background-color: inherit   ;
+        background-color: inherit;
         border: none;
         margin-top: 10px;
         padding: 0;
@@ -78,8 +78,17 @@
         display: none;
     }
 
-    &--card{
+    &--card_wrapper{
         width: 31%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+
+    &--card{
+        width: 100%;
         height: 100%;
         padding: 30px 12px 80px 16px;
         background-color: #C5DBCF;
@@ -88,12 +97,24 @@
     }
 
     &--card:hover{
-        background: #0A775F; 
+        background: var(--primary-color); 
         cursor: pointer;   
     }
 
     &--card:hover &--card_title, &--card:hover &--card_desc{
         color: #FFFFFF;
+    }
+
+    &--radio{
+        appearance: none;
+    }
+
+    &--radio:checked + &--card{
+        background-color: #075947;
+    }
+
+    &--radio:checked + &--card > h3, &--radio:checked + &--card > p{
+        color: #fff;
     }
 
     &--card_title{
